@@ -222,80 +222,76 @@ struct fulltype_s {
 };
 
 /* --- Primary type values --- */
-
-#define TYPE_UNKNOWN        0   /* This type must be casted */
-#define TYPE_NUMBER         1
-#define TYPE_STRING         2
-#define TYPE_VOID           3
-#define TYPE_OBJECT         4
-#define TYPE_MAPPING        5
-#define TYPE_FLOAT          6
-#define TYPE_ANY            7   /* Will match any type */
-#define TYPE_CLOSURE        8
-#define TYPE_SYMBOL         9
-#define TYPE_QUOTED_ARRAY  10
+enum primary_types {
+    TYPE_UNKNOWN      =  0,   /* This type must be casted */
+    TYPE_NUMBER       =  1,
+    TYPE_STRING       =  2,
+    TYPE_VOID         =  3,
+    TYPE_OBJECT       =  4,
+    TYPE_MAPPING      =  5,
+    TYPE_FLOAT        =  6,
+    TYPE_ANY          =  7,  /* Will match any type */
+    TYPE_CLOSURE      =  8,
+    TYPE_SYMBOL       =  9,
+    TYPE_QUOTED_ARRAY = 10,
 #ifdef USE_STRUCTS
-#define TYPE_STRUCT        11   /* Secondary info is the struct id */
+    TYPE_STRUCT       = 11,   /* Secondary info is the struct id */
 
-#define TYPEMAP_SIZE       12   /* Number of types */
-
+    TYPEMAP_SIZE      = 12,   /* Number of types */
 #else
 
-#define TYPEMAP_SIZE       11   /* Number of types */
-
+    TYPEMAP_SIZE      = 11,   /* Number of types */
 #endif /* USE_STRUCTS */
 
+};
+
 /* Flags, or'ed on top of the basic type */
+enum type_flags {
+    TYPE_MOD_POINTER   = 0x0040,       /* Pointer to a basic type */
+    TYPE_MOD_REFERENCE = 0x0080,       /* Reference to a type */
+    TYPE_MOD_MASK      = 0x000000ff,   /* Mask for basic type and flags. */
+  
+    /* Mask for the primary type info (sans modifiers) */
+    PRIMARY_TYPE_MASK  = 0x0F,
 
-#define TYPE_MOD_POINTER    0x0040  /* Pointer to a basic type */
-#define TYPE_MOD_REFERENCE  0x0080  /* Reference to a type */
+    /* Mask to delete TYPE_MOD_REFERENCE and the visibility mods from
+     * a type value. */
+    TYPE_MOD_RMASK     = (TYPE_MOD_MASK & ~TYPE_MOD_REFERENCE),
 
-#define TYPE_MOD_MASK   0x000000ff
-  /* Mask for basic type and flags.
-   */
+     /* Mask to mask out just the typeid_t from a typeflags_t.
+      */
+    TYPEID_MASK        = 0x0000ffff,
+
+     /* Flag set in virtual variables, also interpreted as offset
+      * in the variable index for virtual variables. */
+    VIRTUAL_VAR_TAG    = 0x4000,
+};
 
 
-#define PRIMARY_TYPE_MASK  (0x0F)
-  /* Mask for the primary type info (sans modifiers)
-   */
-
-#define TYPE_MOD_RMASK  (TYPE_MOD_MASK & ~TYPE_MOD_REFERENCE)
-  /* Mask to delete TYPE_MOD_REFERENCE and the visibility mods from
-   * a type value.
-   */
-
-#define TYPEID_MASK (0x0000ffff)
-  /* Mask to mask out just the typeid_t from a typeflags_t.
-   */
 
 #ifdef USE_STRUCTS
 /* Macros to check a type value for a certain primary type.
  */
-
-#define IS_TYPE_STRUCT(t) \
-  (((t).typeflags & (PRIMARY_TYPE_MASK|TYPE_MOD_POINTER|TYPE_MOD_REFERENCE)) == TYPE_STRUCT)
-
-#define IS_TYPE_ANY(t) \
-  (((t).typeflags & (PRIMARY_TYPE_MASK|TYPE_MOD_POINTER|TYPE_MOD_REFERENCE)) == TYPE_ANY)
-
+static INLINE Bool IS_TYPE_STRUCT(fulltype_t t) __attribute__((pure));
+static INLINE Bool IS_TYPE_STRUCT(fulltype_t t) {
+    return (t.typeflags & (PRIMARY_TYPE_MASK|TYPE_MOD_POINTER|TYPE_MOD_REFERENCE)) 
+             == TYPE_STRUCT;
+}
+static INLINE Bool IS_TYPE_ANY(fulltype_t t) __attribute__((pure));
+static INLINE Bool IS_TYPE_ANY(fulltype_t t) {
+    return (t.typeflags & (PRIMARY_TYPE_MASK|TYPE_MOD_POINTER|TYPE_MOD_REFERENCE)) 
+             == TYPE_ANY;
+}
 
 /* Other type related defines */
-
-#define STRUCT_MAX_MEMBERS 255
+enum {
+     STRUCT_MAX_MEMBERS = 255,
   /* We allow up to this number of members per struct, so that
    * we can encode the number of actual members, where needed,
    * in a single bytecode.
    */
+};
 
-#endif
-
-#define VIRTUAL_VAR_TAG 0x4000
-  /* Flag set in virtual variables, also interpreted as offset
-   * in the variable index for virtual variables.
-   */
-
-
-#ifdef USE_STRUCTS
 
 /* void ref_vartype_data(vartype_t *v)
  *   Add another reference to the data associated with vartype <v>.
@@ -454,25 +450,27 @@ struct instr_s
  */
 
 typedef uint32 funflag_t;  /* Function flags */
+typedef int32 sfunflag_t;  /* signed version of Function flags */
 
-#define NAME_INHERITED      0x80000000  /* defined by inheritance */
-#define TYPE_MOD_STATIC     0x40000000  /* Static function or variable    */
-#define TYPE_MOD_NO_MASK    0x20000000  /* The nomask => not redefineable */
-#define TYPE_MOD_PRIVATE    0x10000000  /* Can't be inherited             */
-#define TYPE_MOD_PUBLIC     0x08000000  /* Force inherit through private  */
-#define TYPE_MOD_VARARGS    0x04000000  /* Used for type checking         */
-#define VAR_INITIALIZED     0x04000000  /* Variable is not shared         */
-#define TYPE_MOD_VIRTUAL    0x02000000  /* can be re- and cross- defined  */
-#define TYPE_MOD_PROTECTED  0x01000000  /* cannot be called externally    */
-#define TYPE_MOD_XVARARGS   0x00800000  /* accepts optional arguments     */
-#define TYPE_MOD_NOSAVE     0x00400000  /* vars: can't be saved           */
+enum function_flags {
+    NAME_INHERITED     = 0x80000000,  /* defined by inheritance */
+    TYPE_MOD_STATIC    = 0x40000000,  /* Static function or variable    */
+    TYPE_MOD_NO_MASK   = 0x20000000,  /* The nomask => not redefineable */
+    TYPE_MOD_PRIVATE   = 0x10000000,  /* Can't be inherited             */
+    TYPE_MOD_PUBLIC    = 0x08000000,  /* Force inherit through private  */
+    TYPE_MOD_VARARGS   = 0x04000000,  /* Used for type checking         */
+    VAR_INITIALIZED    = 0x04000000,  /* Variable is not shared         */
+    TYPE_MOD_VIRTUAL   = 0x02000000,  /* can be re- and cross- defined  */
+    TYPE_MOD_PROTECTED = 0x01000000,  /* cannot be called externally    */
+    TYPE_MOD_XVARARGS  = 0x00800000,  /* accepts optional arguments     */
+    TYPE_MOD_NOSAVE    = 0x00400000,  /* vars: can't be saved           */
 
-#define FUNSTART_MASK       0x000fffff
+    FUNSTART_MASK      = 0x000fffff,
   /* Function not inherited: unsigned address of the function code relative
    * to the begin of the program block (struct program_s->program).
    */
 
-#define NAME_CROSS_DEFINED  0x00080000
+    NAME_CROSS_DEFINED = 0x00080000,
   /* Two functions with the same name inherited from A and B into C.
    * The compiler usually prefers A, and the value 'flags & INHERIT_MASK'
    * (in bias-0x20000 representation) stored as B.offset.func is the
@@ -482,7 +480,7 @@ typedef uint32 funflag_t;  /* Function flags */
    * to resolve the function calls in A to call the function in B.
    */
 
-#define INHERIT_MASK        0x0003ffff
+    INHERIT_MASK        = 0x0003ffff,
   /* Function inherited: unsigned index of the parent program descriptor
    * in the struct program_s->inherit[] array. In the parent program, this
    * function may again be inherited.
@@ -491,63 +489,19 @@ typedef uint32 funflag_t;  /* Function flags */
    * (real = this + offset).
    */
 
-
 #ifdef USE_STRUCTS
-#define NAME_HIDDEN         0x00020000 /* Not visible for inheritance    */
-#define NAME_PROTOTYPE      0x00010000 /* Defined by a prototype only    */
-#define NAME_UNDEFINED      0x00008000 /* Not defined yet                */
-#define NAME_TYPES_LOST     0x00004000 /* inherited, no save_types       */
+    NAME_HIDDEN        = 0x00020000, /* Not visible for inheritance    */
+    NAME_PROTOTYPE     = 0x00010000, /* Defined by a prototype only    */
+    NAME_UNDEFINED     = 0x00008000, /* Not defined yet                */
+    NAME_TYPES_LOST    = 0x00004000, /* inherited, no save_types       */
 #else /* !USE_STRUCTS */
-#define NAME_HIDDEN         0x00000800 /* Not visible for inheritance    */
-#define NAME_PROTOTYPE      0x00000400 /* Defined by a prototype only    */
-#define NAME_UNDEFINED      0x00000200 /* Not defined yet                */
-#define NAME_TYPES_LOST     0x00000100 /* inherited, no save_types       */
+    NAME_HIDDEN        = 0x00000800, /* Not visible for inheritance    */
+    NAME_PROTOTYPE     = 0x00000400, /* Defined by a prototype only    */
+    NAME_UNDEFINED     = 0x00000200, /* Not defined yet                */
+    NAME_TYPES_LOST    = 0x00000100, /* inherited, no save_types       */
 #endif /* USE_STRUCTS */
+};
 
-#define CROSSDEF_NAME_OFFSET(flags) \
-     (((flags) & INHERIT_MASK) - ((INHERIT_MASK + 1) >> 1))
-
-  /* For a given NAME_CROSS_DEFINED function, extract the difference to
-   * the real functions index from the flags.
-   */
-
-#define GET_CROSSDEF_OFFSET(value) \
-     ((value) - ((INHERIT_MASK + 1) >> 1))
-
-  /* The index difference <value> in bias-notation is converted back into
-   * the real number. The difference to CROSSDEF_NAME_OFFSET is that <value>
-   * is supposed to be the plain number, not a real function flags word.
-   */
-
-#define MAKE_CROSSDEF_OFFSET(value) \
-     ((value) + ((INHERIT_MASK + 1) >> 1))
-
-  /* Convert the index difference <value> into the bias-notation for storage
-   * in the function flags.
-   */
-
-#define MAKE_CROSSDEF_ROFFSET(value) \
-     ((value) - ((INHERIT_MASK + 1) >> 1))
-
-  /* Convert the reverse index difference <value> into the bias-notation for
-   * storage in the function flags.
-   * TODO: What is this exactly?
-   */
-
-#define SEARCH_FUNCTION_INHERIT(inheritp, progp, fx) \
-    do{ \
-        int sf_inum = progp->num_inherited; \
-        for (inheritp = progp->inherit; \
-             sf_inum > 0 \
-          && (fx < inheritp->function_index_offset \
-           || fx >= inheritp->function_index_offset + inheritp->prog->num_functions); \
-             inheritp++, sf_inum--); \
-    } while(0)
-
-  /* Look for the right inherit index, which contains the function with
-   * the index <fx>. It is assumed, that progp has at least one inherit
-   * and that <fx> points indeed to a function in an inherit of <progp>.
-   */
 
 /* --- Function header ---
  *
@@ -592,35 +546,65 @@ typedef uint32 funflag_t;  /* Function flags */
 typedef bytecode_p fun_hdr_p;
   /* TODO: Make this a void* for now? */
 
-#define SIMUL_EFUN_FUNSTART ((bytecode_p) -1)
+/* TODO: Ugh. I am not convinced that this is a good idea, although I don't
+ * TODO::have a better one right now. */
+static const bytecode_p SIMUL_EFUN_FUNSTART = (bytecode_p)-1;
   /* Special value used for inter_pc and funstart to mark simul_efuns
    * for dump_trace().
    * TODO: Invent something similar for efun/operator closures?
    */
 
-#define EFUN_FUNSTART ((bytecode_p) -2)
+static const bytecode_p EFUN_FUNSTART = (bytecode_p)-2;
   /* Special value used for funstart to mark efuns for dump_trace.
    */
 
 
-#define FUNCTION_NAMEP(p)     ((void *)((char *)p - sizeof(vartype_t) - sizeof(string_t *)))
-#define FUNCTION_TYPEP(p)     ((void *)((char *)p - sizeof(vartype_t)))
-#define FUNCTION_NUM_ARGS(p)  EXTRACT_SCHAR((char *)p)
-#define FUNCTION_NUM_VARS(p)  (*((unsigned char *)((char *)p + sizeof(char))))
-#define FUNCTION_CODE(p)      ((bytecode_p)((unsigned char *)p + 2* sizeof(char)))
-#define FUNCTION_FROM_CODE(p) ((fun_hdr_p)((unsigned char *)p - 2* sizeof(char)))
+static INLINE void * FUNCTION_NAMEP(const fun_hdr_p const p) 
+                          __attribute__((nonnull(1))) __attribute__((const));
+static INLINE void * FUNCTION_NAMEP(const fun_hdr_p const p)
+{
+    return (char *)p - sizeof(vartype_t) - sizeof(string_t *);
+}
+static INLINE void * FUNCTION_TYPEP(const fun_hdr_p const p) 
+                          __attribute__((nonnull(1))) __attribute__((const));
+static INLINE void * FUNCTION_TYPEP(const fun_hdr_p const p)
+{
+    return (char *)p - sizeof(vartype_t);
+}
+static INLINE int FUNCTION_NUM_ARGS(const fun_hdr_p const p) 
+                          __attribute__((nonnull(1))) __attribute__((pure));
+static INLINE int FUNCTION_NUM_ARGS(const fun_hdr_p const p)
+{
+    return EXTRACT_SCHAR((char *)p);
+}
+static INLINE int FUNCTION_NUM_VARS(const fun_hdr_p const p)
+                          __attribute__((nonnull(1))) __attribute__((pure));
+static INLINE int FUNCTION_NUM_VARS(const fun_hdr_p const p)
+{
+    return EXTRACT_UCHAR((char *)p + sizeof(char));
+}
+static INLINE bytecode_p FUNCTION_CODE(const fun_hdr_p const p)
+                          __attribute__((nonnull(1))) __attribute__((const));
+static INLINE bytecode_p FUNCTION_CODE(const fun_hdr_p const p)
+{
+    return (unsigned char *)p + 2 * sizeof(char);
+}
+static INLINE bytecode_p FUNCTION_FROM_CODE(const fun_hdr_p const p)
+                          __attribute__((nonnull(1))) __attribute__((const));
+static INLINE bytecode_p FUNCTION_FROM_CODE(const fun_hdr_p const p)
+{
+    return (unsigned char *)p - 2 * sizeof(char);
+}
 
-#define FUNCTION_PRE_HDR_SIZE (sizeof(string_t*) + sizeof(vartype_t))
-  /* Number of function header bytes before the function pointer.
-   */
+enum function_header_sizes {
+    /* Number of function header bytes before the function pointer. */
+    FUNCTION_PRE_HDR_SIZE = sizeof(string_t*) + sizeof(vartype_t),
+    /* Number of function header bytes after the function pointer. */
+    FUNCTION_POST_HDR_SIZE = 2 * sizeof(char),
+    /* Total size of the function header. */
+    FUNCTION_HDR_SIZE = FUNCTION_PRE_HDR_SIZE + FUNCTION_POST_HDR_SIZE,
+};
 
-#define FUNCTION_POST_HDR_SIZE (2 * sizeof(char))
-  /* Number of function header bytes after the function pointer.
-   */
-
-#define FUNCTION_HDR_SIZE     (FUNCTION_PRE_HDR_SIZE + FUNCTION_POST_HDR_SIZE)
-  /* Total size of the function header.
-   */
 
 /* --- struct variable_s: description of one variable
  *
@@ -661,15 +645,17 @@ struct inherit_s
        */
     unsigned short inherit_type;            /* Type of inherit */
 
-#   define INHERIT_TYPE_NORMAL      0x0000  /* Type: Normal inherit */
-#   define INHERIT_TYPE_VIRTUAL     0x0001  /* Type: Virtual inherit */
-#   define INHERIT_TYPE_EXTRA       0x0002  /* Type: Extra inherit added by
-                                              * copy_variables()
-                                              */
-#   define INHERIT_TYPE_DUPLICATE   0x0004  /* Flag: Duplicate virt inherit */
     unsigned short inherit_depth;           /* Depth of inherit */
 };
-
+/* Constants for inherit_type in inherit_s */
+enum inherit_types {
+    INHERIT_TYPE_NORMAL    = 0x0000,  /* Type: Normal inherit */
+    INHERIT_TYPE_VIRTUAL   = 0x0001,  /* Type: Virtual inherit */
+    INHERIT_TYPE_EXTRA     = 0x0002,  /* Type: Extra inherit added by
+                                              * copy_variables()
+                                              */
+    INHERIT_TYPE_DUPLICATE = 0x0004,  /* Flag: Duplicate virt inherit */
+};
 
 #ifdef USE_STRUCTS
 /* --- struct struct_def: description of one struct
@@ -759,7 +745,6 @@ struct program_s
        * .swapnum+.total_size .
        */
     unsigned short *function_names;
-#define PROGRAM_END(program) ((bytecode_p)(program).function_names)
       /* Lookup table [.num_function_names] function-index -> offset of
        * the function within the functions[] table. function_names[] is
        * stored right after the the bytecode within the same allocation
@@ -802,18 +787,6 @@ struct program_s
     unsigned short flags;
       /* Flags for the program: */
 
-#   define P_REPLACE_ACTIVE   0x0001
-      /* This program will be or has been replaced at least once.
-       * As this flag is never reset, the caller must check the
-       * obj_list_replace if his object is affected or not.
-       */
-#   define P_NO_INHERIT       0x0002 /* Program must not be inherited */
-#   define P_NO_CLONE         0x0004 /* No clones allowed */
-#   define P_NO_SHADOW        0x0008 /* No shadows allowed */
-#   define P_SHARE_VARIABLES  0x0010 /* Clone vars are assigned from 
-                                      * the current blueprint vars.
-                                      */
-
     short heart_beat;
       /* Index of the heart beat function. -1 means no heart beat
        */
@@ -830,7 +803,6 @@ struct program_s
     vartype_t *argument_types;
     unsigned short *type_start;
       /* TODO: Some code relies on this being unsigned short */
-#   define INDEX_START_NONE                65535
 
     p_int swap_num;
       /* The swap number (swap file offset) for an unswapped program
@@ -861,6 +833,30 @@ struct program_s
       /* Number of listed struct definitions */
 #endif /* USE_STRUCTS */
 };
+
+/* Constants for flags in program_s. */
+enum program_flags {
+    P_REPLACE_ACTIVE  = 0x0001,
+      /* This program will be or has been replaced at least once.
+       * As this flag is never reset, the caller must check the
+       * obj_list_replace if his object is affected or not.
+       */
+    P_NO_INHERIT      = 0x0002, /* Program must not be inherited */
+    P_NO_CLONE        = 0x0004, /* No clones allowed */
+    P_NO_SHADOW       = 0x0008, /* No shadows allowed */
+    P_SHARE_VARIABLES = 0x0010, /* Clone vars are assigned from 
+                                 * the current blueprint vars. */
+};
+/* Special value for type_start in program_s designating that the function has
+ * no type info. */
+enum {
+    INDEX_START_NONE = 65535,   
+};
+
+static INLINE bytecode_p PROGRAM_END(program_t program) __attribute__((pure));
+static INLINE bytecode_p PROGRAM_END(program_t program) {
+    return (bytecode_p)(program.function_names);
+}
 
 
 /* --- struct linenumbers_s: the linenumber head structure
@@ -914,9 +910,11 @@ struct function_s
     fulltype_t    type;       /* Return type of function (counted). */
     unsigned char num_local;  /* Number of local variables */
     unsigned char num_arg;    /* Number of arguments needed. */
-#   define SIMUL_EFUN_VARARGS  0xff  /* Magic num_arg value for varargs */
 };
 
+enum {
+    SIMUL_EFUN_VARARGS = 0xff,  /* Magic num_arg value for varargs */
+};
 
 /* --- Bytecodes used to encode line numbers ---
  *
@@ -936,28 +934,28 @@ struct function_s
 /* Bytecodes 0x00..0x3a: The amount of program bytes generated for the
  * current line; this entry is complete with that.
  */
-
-#define LI_MAXOFFSET      0x3b
+enum line_numbe_bytecodes {
+    LI_MAXOFFSET     = 0x3b,
   /* The current line generated 0x3b bytes (more), but the entry
    * is not complete. This code used after the linecodes 0xC0..0xFF.
    */
 
-#define LI_BACK           0x3c
+    LI_BACK          = 0x3c,
   /* Followed by unsigned byte <off>.
    * The current line counter was set back by <off>+1.
    */
 
-#define LI_INCLUDE        0x3d
+    LI_INCLUDE       = 0x3d,
   /* The following program bytes were generated from the next included
    * file. Reset the current line number to 0.
    * LI_INCLUDEs can be nested.
    */
 
-#define LI_INCLUDE_END    0x3e
+    LI_INCLUDE_END   = 0x3e,
   /* End of the included program part.
    */
 
-#define LI_L_RELOCATED    0x3f
+    LI_L_RELOCATED   = 0x3f,
   /* Followed by bytes <hi> <lo> LI_L_RELOCATED
    * The lines were relocated from a line by a delta to the current_line-2.
    * The delta, an signed int16, is encoded in <hi> and <lo>.
@@ -970,25 +968,95 @@ struct function_s
  * Each code is a complete entry.
  */
 
-#define LI_RELOCATED      0xc0
+    LI_RELOCATED     = 0xc0,
   /* Bytecodes 0x80..0xDF: a small line relocation.
    * The lines were relocated from a line by a delta -0x20..0x1F
    * to the current_line-2.
    * The delta is encoded as delta+LI_RELOCATED.
    */
 
-#define LI_SMALL_REL      0x20
+    LI_SMALL_REL     = 0x20,
   /* The allowed magnitude of a relocation to fit into a small
    * relocation code.
    */
 
-#define LI_MAXEMPTY       0x20
+    LI_MAXEMPTY      = 0x20,
   /* Bytecodes 0xE0..0xFF: 'use' a number of lines between 1 and 32
    * -> bytecode = (0x100 - lines)
    * The entry is not complete.
    */
-
+};
 
 /***************************************************************************/
+
+/* Static helper functions */
+static INLINE intptr_t CROSSDEF_NAME_OFFSET(const funflag_t flags)
+                                          __attribute__((const));
+static INLINE intptr_t CROSSDEF_NAME_OFFSET(const funflag_t flags)
+  /* For a given NAME_CROSS_DEFINED function, extract the difference to
+   * the real functions index from the flags.
+   */
+{
+    // flags is unsigned, but the offset _must_ be signed
+    return ((sfunflag_t)(flags & INHERIT_MASK)) - 
+                          ((INHERIT_MASK + 1) >> 1);
+}
+
+static INLINE intptr_t GET_CROSSDEF_OFFSET(const funflag_t value)
+                                          __attribute__((const));
+static INLINE intptr_t GET_CROSSDEF_OFFSET(const funflag_t value)
+  /* The index difference <value> in bias-notation is converted back into
+   * the real number. The difference to CROSSDEF_NAME_OFFSET is that <value>
+   * is supposed to be the plain number, not a real function flags word.
+   */
+{
+    // value is unsigned, but the offset _must_ be signed
+    return ((sfunflag_t)(value)) - ((INHERIT_MASK + 1) >> 1);
+}
+
+static INLINE funflag_t MAKE_CROSSDEF_OFFSET(const intptr_t value)
+                                          __attribute__((const));
+static INLINE funflag_t MAKE_CROSSDEF_OFFSET(const intptr_t value)
+  /* Convert the index difference <value> into the bias-notation for storage
+   * in the function flags.
+   */
+{
+    // flags is unsigned, but the offset _must_ be signed
+    return ((value) + ((INHERIT_MASK + 1) >> 1));
+}
+
+static INLINE funflag_t MAKE_CROSSDEF_ROFFSET(const intptr_t value)
+                                          __attribute__((const));
+static INLINE funflag_t MAKE_CROSSDEF_ROFFSET(const intptr_t value)
+  /* Convert the reverse index difference <value> into the bias-notation for
+   * storage in the function flags.
+   * TODO: What is this exactly?
+   */
+{
+    // flags is unsigned, but the offset _must_ be signed
+    return ((value) - ((INHERIT_MASK + 1) >> 1));
+}
+
+static INLINE inherit_t * search_function_inherit(const program_t *const progp, 
+                                                  const int fx)
+                                                __attribute__((pure)) 
+                                                __attribute__((nonnull(1)));
+static INLINE inherit_t * search_function_inherit(const program_t *const progp, 
+                                                  const int fx)
+  /* Look for the right inherit index, which contains the function with
+   * the index <fx>. It is assumed, that progp has at least one inherit
+   * and that <fx> points indeed to a function in an inherit of <progp>.
+   */
+{
+    int inum = progp->num_inherited;
+    inherit_t *inheritp;
+
+    for (inheritp = progp->inherit ; 
+           inum > 0 && (fx < inheritp->function_index_offset ||
+           fx >= inheritp->function_index_offset + inheritp->prog->num_functions);
+           inheritp++, inum--) NOOP;
+    
+    return inheritp;
+}
 
 #endif /* EXEC_H__ */
